--- a/index.html
+++ b/index.html
@@ -6,19 +6,44 @@
     <title>Price Calculator</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Comic Sans MS', cursive, sans-serif;
             max-width: 600px;
             margin: auto;
             padding: 20px;
+            background-color: #f0f8ff;
+        }
+        label {
+            font-weight: bold;
+            color: #2f4f4f;
         }
         input {
             margin-bottom: 10px;
-            width: 100%;
+            width: calc(100% - 20px);
             padding: 8px;
+            border: 2px solid #87cefa;
+            border-radius: 5px;
+            outline: none;
+        }
+        input:focus {
+            border-color: #00bfff;
+            box-shadow: 0 0 5px #00bfff;
+        }
+        button {
+            background-color: #ffa500;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+        }
+        button:hover {
+            background-color: #ff8c00;
         }
         .result {
             font-weight: bold;
             margin-top: 20px;
+            color: #ff4500;
         }
     </style>
 </head>
@@ -28,12 +53,12 @@
     <input type="number" id="price" placeholder="Enter price in USD" required>
     <p>Price in INR: <span id="priceInINR"></span></p>
 
-    <label for="discount">Discount Amount in USD:</label>
-    <input type="number" id="discount" placeholder="Enter discount amount" required>
+    <label for="discount">Discount Percentage (%):</label>
+    <input type="number" id="discount" placeholder="Enter discount percentage" required>
     <p>Discount in INR: <span id="discountInINR"></span></p>
 
-    <label for="tax">Tax Percentage (%):</label>
-    <input type="number" id="tax" placeholder="Enter tax percentage" required>
+    <label for="tax">Tax Amount in USD:</label>
+    <input type="number" id="tax" placeholder="Enter tax amount" required>
     <p>Tax Amount in USD: <span id="taxAmountUSD"></span></p>
     <p>Tax in INR: <span id="taxInINR"></span></p>
 
@@ -47,24 +72,24 @@
     <script>
         function calculateTotal() {
             let price = parseFloat(document.getElementById('price').value);
-            let discount = parseFloat(document.getElementById('discount').value);
-            let taxPercentage = parseFloat(document.getElementById('tax').value);
+            let discountPercentage = parseFloat(document.getElementById('discount').value);
+            let taxAmount = parseFloat(document.getElementById('tax').value);
             let conversionRate = parseFloat(document.getElementById('conversionRate').value);
 
-            if (isNaN(price) || isNaN(discount) || isNaN(taxPercentage) || isNaN(conversionRate)) {
+            if (isNaN(price) || isNaN(discountPercentage) || isNaN(taxAmount) || isNaN(conversionRate)) {
                 document.getElementById('result').innerText = 'Please fill out all fields with valid numbers.';
                 return;
             }
 
-            let taxAmountUSD = (price * taxPercentage) / 100;
-            let totalUSD = price - discount + taxAmountUSD;
+            let discountAmountUSD = (price * discountPercentage) / 100;
+            let totalUSD = price - discountAmountUSD + taxAmount;
             let totalINR = totalUSD * conversionRate;
 
             let priceInINR = price * conversionRate;
-            let discountInINR = discount * conversionRate;
-            let taxInINR = taxAmountUSD * conversionRate;
+            let discountInINR = discountAmountUSD * conversionRate;
+            let taxInINR = taxAmount * conversionRate;
 
-            document.getElementById('taxAmountUSD').innerText = `$${taxAmountUSD.toFixed(2)}`;
+            document.getElementById('taxAmountUSD').innerText = `$${taxAmount.toFixed(2)}`;
             document.getElementById('priceInINR').innerText = `₹${priceInINR.toFixed(2)}`;
             document.getElementById('discountInINR').innerText = `₹${discountInINR.toFixed(2)}`;
             document.getElementById('taxInINR').innerText = `₹${taxInINR.toFixed(2)}`;
